--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 python=3.11
 numpy=1.26.4
 tensorflow=2.13.*
-scikit-learn=1.8.0
+scikit-learn<1.4
 pandas=2.3.3
 xgboost=3.1.2
 imbalanced-learn=0.12.*
